<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Container for Logo and Toggle Layout -->
    <LinearLayout
        android:id="@+id/logoAndToggleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <!-- Logo at the top -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo_description" />

        <!-- Toggle buttons below the logo for login/sign-in -->
        <LinearLayout
            android:id="@+id/toggleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="80dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginEnd="20dp"
                android:onClick="onLoginClicked" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textColor="@color/theme_purple"
                android:textSize="18sp"
                android:layout_marginStart="10dp"
                android:onClick="onSignUpClicked" />
        </LinearLayout>
    </LinearLayout>

    <!-- Box containing Email, Password fields, Authenticate Button, and Forgot/Account Text -->
    <LinearLayout
        android:id="@+id/authenticationBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_box"
        android:layout_below="@id/logoAndToggleContainer"
        android:padding="20dp"
        android:layout_marginTop="20dp">

        <!-- Main Email and Password Fields -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp" />

        <!-- Main Authentication Button -->
        <Button
            android:id="@+id/authenticateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authenticate"
            android:textAllCaps="false" 
            android:textColor="@color/white"
            android:background="@drawable/square_button_fill"
            android:layout_marginTop="20dp" />

        <!-- Forgot your password or Already have an account? Text -->
        <TextView
            android:id="@+id/passwordResetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/has_account"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:onClick="onForgotPasswordClicked"/>

    </LinearLayout>

    <!-- Social Authentication Buttons -->
    <LinearLayout
        android:id="@+id/socialAuthButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/authenticationBox"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/googleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_signIn"
            android:drawableStart="@drawable/ic_google_logo"
            android:drawablePadding="-8dp"
            android:paddingStart="16dp"
            android:textAllCaps="false" 
            android:background="@drawable/rounded_button_no_fill"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/facebookSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/facebook_signIn"
            android:drawableStart="@drawable/ic_facebook_logo"
            android:drawablePadding="9dp"
            android:textAllCaps="false" 
            android:background="@drawable/rounded_button_no_fill"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</RelativeLayout>
