<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- Logo at the top -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:src="@drawable/ic_splash_logo"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description" />

    <!-- Filter Button -->
    <LinearLayout
        android:id="@+id/filterButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:orientation="horizontal"
        android:gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp">

        <Button
            android:id="@+id/filterButton"
            android:background="#00FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:drawableLeft="@drawable/ic_filter"
            android:drawablePadding="8dp" 
            android:layout_marginEnd = "190dp"/>

        <!-- Profile and Search Buttons (Right aligned) -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <!-- Search Button -->
            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_search"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/search_button_description"
                android:layout_marginEnd="4dp"/>

            <!-- Profile Button -->
            <ImageButton
                android:id="@+id/profileButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_profile"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile_button_description"/>
        </LinearLayout>
    </LinearLayout>


    <!-- Mentor Carousel (Placeholder) -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mentorCarousel"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/filterButtons"
        android:layout_marginTop="16dp"
        android:background="#EEEEEE"
    />
</RelativeLayout>
